@@ -1,0 +1,12 @@
+#
+# Makefile.mingw
+#
+# Description: Makefile for flip plugin.
+#
+
+PP_TOP :=		..
+
+PP = google
+
+include $(PP_TOP)/win_pp.mak
+
