@@ -1,7 +1,8 @@
 Version 2.4.0mtn:
 	* Merged the Autoprofile plugin into our build system.
 	* Fixed convbadger's failure to update on conversation switch.
-	* Added Ike Gingerich's colorize plugin
+	* Added Ike Gingerich's colorize plugin.
+	* Added google plugin for "I'm Feeling Lucky" searches.
 
 Version 2.3.0: 03/17/08
 	* Fixed a typo in irc-more's source that allowed a potential double-free
